fix: layout issues, spacing issues, etc

--- a/packages/client-app/src/assets/variables.css
+++ b/packages/client-app/src/assets/variables.css
@@ -158,7 +158,6 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
 
   font-family: var(--scalar-font);
   color: var(--scalar-color-1);
